--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:name=".activities.ProductDetailActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".activities.ProfileActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
