--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,8 @@ dependencies {
     // Image Loading (for local images)
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
-    // For capturing images from camera
-    implementation 'androidx.camera:camera-camera2:1.3.0'
-    implementation 'androidx.camera:camera-lifecycle:1.3.0'
-    implementation 'androidx.camera:camera-view:1.3.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+
+    // For permission handling
+    implementation 'androidx.activity:activity-ktx:1.8.0'
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
 }
