--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Add these permissions for calling and messaging -->
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.SEND_SMS" />
+    <!-- Simplified permissions - only what we need -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <!-- Remove camera features since we're using basic intent -->
+    <!-- <uses-feature android:name="android.hardware.camera" android:required="false" /> -->
+    <!-- <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" /> -->
 
     <application
         android:allowBackup="true"
@@ -13,6 +17,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
 
+        <!-- Your existing activities -->
         <activity
             android:name=".activities.LoginActivity"
             android:exported="true">
@@ -37,6 +42,17 @@
         <activity
             android:name=".activities.ProfileActivity"
             android:exported="false" />
+
+        <!-- Remove the file provider since we're using basic approach -->
+        <!-- <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider> -->
 
     </application>
 
