--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,14 @@ dependencies {
     // For permission handling
     implementation 'androidx.activity:activity-ktx:1.8.0'
     implementation 'androidx.fragment:fragment-ktx:1.6.1'
+
+    // Google Maps
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    // Glide for image loading
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
+    // Existing database
+    implementation 'androidx.sqlite:sqlite-ktx:2.4.0'
 }
